--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "^14.2.31",
+    "pixi.js": "^8.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
