--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+  "@solana/wallet-adapter-react-ui": "^0.9.39",
+  "@solana/wallet-adapter-walletconnect": "^0.9.36",
+  "@solana/wallet-adapter-phantom": "^0.9.28",
+  "@solana/wallet-adapter-solflare": "^0.6.32",
+    "@solana/web3.js": "^1.98.4",
     "next": "^14.2.31",
     "react": "18.2.0",
     "react-dom": "18.2.0"
