--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+  "build": "next build",
+  "start": "next start",
+  "export": "next build && next export"
   },
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
   "@solana/wallet-adapter-react-ui": "^0.9.39",
-  "@solana/wallet-adapter-walletconnect": "^0.9.36",
+  "@solana/wallet-adapter-walletconnect": "^0.1.21",
   "@solana/wallet-adapter-phantom": "^0.9.28",
   "@solana/wallet-adapter-solflare": "^0.6.32",
     "@solana/web3.js": "^1.98.4",
