--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "start": "next start",
   "export": "next build && next export"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
