--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "export": "next build && next export"
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js",
+    "export": "next build",
+    "deploy": "npm run build && echo 'Build complete! Upload files and run npm start on Namecheap.'",
+    "production": "NODE_ENV=production node server.js"
   },
   "engines": {
     "node": ">=20"
